test/corpus/struct.txt
============================
Struct declaration
============================

struct Foo;

struct Foo{}

struct Foo{
    bar: bool
}

struct Foo{
    bar1: u32,
    bar2: u32
}

struct Foo<T>{
    bar1: T,
}

struct Foo<A,B> {
    bar1: (A, B)
}

#[derive(foo)]
struct Foo{}

---

(source_file
    (struct_declaration
        (name)
    )
    (struct_declaration
        (name)
        (member_declaration_list)
    )
    (struct_declaration
        (name)
        (member_declaration_list
            (member_declaration
                (name)
                (type_identifier (qualified_name (name)))
            )
        )
    )
    (struct_declaration
        (name)
        (member_declaration_list
            (member_declaration
                (name)
                (type_identifier (qualified_name (name)))
            )
            (member_declaration
                (name)
                (type_identifier (qualified_name (name)))
            )
        )
    )
    (struct_declaration
        (name)
        (type_parameter_list (name))
        (member_declaration_list
            (member_declaration
                (name)
                (type_identifier (qualified_name (name)))
            )
        )
    )
    (struct_declaration
        (name)
        (type_parameter_list
          (name)
          (name)
        )
        (member_declaration_list
            (member_declaration
                (name)
                (type_tuple 
                    (type_identifier (qualified_name (name)))
                    (type_identifier (qualified_name (name)))
                )
            )
        )
    )
    (struct_declaration
        (attribute_list
            (attribute 
                (path (name))
                (attribute_argument (name))
            )
        )
        (name)
        (member_declaration_list)
    )
)
