test/corpus/trait.txt
============================
Trait declaration
============================

trait Foo {}

trait Foo {
    fn bar1(self: Foo) -> u64;
    fn bar2(self: Foo) -> u64;
}

trait Foo {
    #[someattribute]
    fn bar1(self: Foo) -> u64;
}

trait Foo<T> {
    fn bar1(self: T) -> u64;
}

trait Foo<A,B> {
    fn bar1(a: A, b: B) -> u64;
}

trait Foo {
    fn bar() -> u64 {
        let x = 8;
    }
}

---

(source_file
    (trait_declaration
        (name)
        (trait_declaration_list)
    )
    (trait_declaration
        (name)
        (trait_declaration_list
            (trait_fun
                (fun_signature
                    (name)
                    (parameter_list
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                    )
                    (type (name))
                )
            )
            (trait_fun
                (fun_signature
                    (name)
                    (parameter_list
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                    )
                    (type (name))
                )
            )
        )
    )
    (trait_declaration
        (name)
        (trait_declaration_list
            (trait_fun
                (fun_signature
                    (attribute_list (attribute (name)))
                    (name)
                    (parameter_list
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                    )
                    (type (name))
                )
            )
        )
    )
    (trait_declaration
        (name)
        (generic_parameter_list
            (generic_parameter_declaration (name))
        )
        (trait_declaration_list
            (trait_fun
                (fun_signature
                    (name)
                    (parameter_list
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                    )
                    (type (name))
                )
            )
        )
    )
    (trait_declaration
        (name)
        (generic_parameter_list
            (generic_parameter_declaration (name))
            (generic_parameter_declaration (name))
        )
        (trait_declaration_list
            (trait_fun
                (fun_signature
                    (name)
                    (parameter_list
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                        (parameter_declaration
                            (name)
                            (type (name))
                        )
                    )
                    (type (name))
                )
            )
        )
    )
    (trait_declaration
        (name)
        (trait_declaration_list
            (trait_fun
                (fun_signature
                    (name)
                    (parameter_list)
                    (type (name))
                )
                (block
                    (let_statement
                        (name)
                        (integer)
                    )
                )
            )
        )
    )
)